@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import no.nav.testnav.apps.personservice.config.Consumers;
 import no.nav.testnav.apps.personservice.consumer.v1.command.GetPdlAktoerCommand;
 import no.nav.testnav.apps.personservice.consumer.v1.command.GetPdlPersonCommand;
+import no.nav.testnav.apps.personservice.consumer.v1.pdl.graphql.HentPerson;
 import no.nav.testnav.apps.personservice.consumer.v1.pdl.graphql.MetadataDTO;
 import no.nav.testnav.apps.personservice.consumer.v1.pdl.graphql.PdlAktoer;
 import no.nav.testnav.apps.personservice.domain.Person;
@@ -19,14 +20,17 @@ import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
 import reactor.util.function.Tuple2;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
+import static java.util.Collections.emptySet;
 import static java.util.Objects.nonNull;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
@@ -80,65 +84,6 @@ public class PdlApiConsumer {
                 });
     }
 
-    private boolean isNotPresent(PdlAktoer pdlAktoer) {
-
-        return pdlAktoer.getErrors().stream().anyMatch(value -> value.getMessage().equals("Fant ikke person"));
-    }
-
-    private boolean isGruppe(PdlAktoer.AktoerIdent ident, String gruppe) {
-
-        return isNotBlank(ident.getIdent()) && !ident.getHistorisk() && gruppe.equals(ident.getGruppe());
-    }
-
-    private boolean isPresent(String ident, Tuple2<PdlAktoer, PdlAktoer> pdlAktoer, Set<String> opplysningId) {
-
-        var statusQ1 = isPresent(ident, pdlAktoer.getT1(), "q1", opplysningId);
-        var statusQ2 = isPresent(ident, pdlAktoer.getT2(), "q2", opplysningId);
-
-        log.info("Ident {}, isPresent() {}, (q1: {}, q2: {})", ident, statusQ1 && statusQ2, statusQ1, statusQ2);
-        return statusQ1 && statusQ2;
-    }
-
-    private boolean isPresent(String ident, PdlAktoer pdlAktoer, String miljoe, Set<String> opplysningId) {
-
-        var person = pdlAktoer.getData().getHentPerson();
-        log.info("Sjekker ident {} i miljø {}, med PDL opplysningId {}, sjekkes for mottatt opplysningId {}", ident, miljoe,
-                nonNull(person) ?
-                        Stream.of(person.getNavn(), person.getFoedselsdato(), person.getKjoenn(), person.getFolkeregisterpersonstatus())
-                                .flatMap(Collection::stream)
-                                .map(MetadataDTO::getMetadata)
-                                .map(MetadataDTO.Metadata::getOpplysningsId)
-                                .collect(Collectors.joining(", ")) : null,
-                nonNull(opplysningId) ?
-                        String.join(", ", opplysningId) :
-                        null);
-
-        boolean resultat;
-        if (nonNull(opplysningId)) {
-
-            resultat = nonNull(person) &&
-                    Stream.of(person.getNavn(), person.getFoedselsdato(), person.getKjoenn(), person.getFolkeregisterpersonstatus())
-                            .flatMap(Collection::stream)
-                            .map(MetadataDTO::getMetadata)
-                            .map(MetadataDTO.Metadata::getOpplysningsId)
-                            .anyMatch(opplysningId::contains);
-
-        } else {
-
-            List<PdlAktoer.AktoerIdent> identer = nonNull(pdlAktoer) && nonNull(pdlAktoer.getData()) && nonNull(pdlAktoer.getData().getHentIdenter()) ?
-                    pdlAktoer.getData().getHentIdenter().getIdenter() : emptyList();
-
-            resultat = nonNull(pdlAktoer) &&
-                    pdlAktoer.getErrors().stream().noneMatch(value -> value.getMessage().equals("Fant ikke person")) &&
-                    identer.stream()
-                            .filter(ident1 -> identer.stream().anyMatch(ident2 -> isGruppe(ident2, "AKTORID")))
-                            .anyMatch(ident1 -> identer.stream().anyMatch(ident2 -> isGruppe(ident2, "FOLKEREGISTERIDENT")) ||
-                                    identer.stream().anyMatch(ident2 -> isGruppe(ident2, "NPID")));
-        }
-
-        return resultat;
-    }
-
     public Mono<Optional<PdlAktoer.AktoerIdent>> getAktoer(String ident) {
 
         log.info("Henter ident {} fra PDL", ident);
@@ -150,7 +95,7 @@ public class PdlApiConsumer {
                             if (isNotPresent(tuple.getT1()) || isNotPresent(tuple.getT2())) {
                                 return Optional.empty();
                             }
-                            return Optional.of(tuple.getT1().getData().getHentIdenter().getIdenter().get(0));
+                            return Optional.of(tuple.getT1().getData().getHentIdenter().getIdenter().getFirst());
                         }));
     }
 
@@ -161,5 +106,73 @@ public class PdlApiConsumer {
                 .flatMap(token -> Mono.zip(new GetPdlAktoerCommand(webClient, PDL_Q1_URL, ident, token.getTokenValue()).call(),
                                 new GetPdlAktoerCommand(webClient, PDL_URL, ident, token.getTokenValue()).call())
                         .map(tuple -> isPresent(ident, tuple, opplysningId)));
+    }
+
+    private static boolean isNotPresent(PdlAktoer pdlAktoer) {
+
+        return pdlAktoer.getErrors().stream().anyMatch(value -> value.getMessage().equals("Fant ikke person"));
+    }
+
+    private static boolean isGruppe(PdlAktoer.AktoerIdent ident, String gruppe) {
+
+        return isNotBlank(ident.getIdent()) && !ident.getHistorisk() && gruppe.equals(ident.getGruppe());
+    }
+
+    private static boolean isPresent(String ident, Tuple2<PdlAktoer, PdlAktoer> pdlAktoer, Set<String> opplysningId) {
+
+        var statusQ1 = isPresent(ident, pdlAktoer.getT1(), "q1", opplysningId);
+        var statusQ2 = isPresent(ident, pdlAktoer.getT2(), "q2", opplysningId);
+
+        log.info("Ident {}, isPresent() {}, (q1: {}, q2: {})", ident, statusQ1 && statusQ2, statusQ1, statusQ2);
+        return statusQ1 && statusQ2;
+    }
+
+    private static boolean isPresent(String ident, PdlAktoer pdlAktoer, String miljoe, Set<String> opplysningId) {
+
+        var opplysningIdsFraPdl = getOpplysningIds(pdlAktoer.getData().getHentPerson());
+
+        log.info("Sjekker ident {} i miljø {}, med PDL opplysningId {}, sjekkes for mottatt opplysningId {}", ident, miljoe,
+                String.join(",",opplysningIdsFraPdl),
+                nonNull(opplysningId) ?
+                        String.join(", ", opplysningId) :
+                        null);
+
+
+        if (nonNull(opplysningId)) {
+
+            return opplysningId.stream()
+                    .anyMatch(opplysningIdsFraPdl::contains);
+
+        } else {
+
+            List<PdlAktoer.AktoerIdent> identer = nonNull(pdlAktoer.getData().getHentIdenter()) ?
+                    pdlAktoer.getData().getHentIdenter().getIdenter() : emptyList();
+
+            return
+                    pdlAktoer.getErrors().stream().noneMatch(value -> value.getMessage().equals("Fant ikke person")) &&
+                    identer.stream()
+                            .filter(ident1 -> identer.stream().anyMatch(ident2 -> isGruppe(ident2, "AKTORID")))
+                            .anyMatch(ident1 -> identer.stream().anyMatch(ident2 -> isGruppe(ident2, "FOLKEREGISTERIDENT")) ||
+                                    identer.stream().anyMatch(ident2 -> isGruppe(ident2, "NPID")));
+        }
+    }
+
+    private static Set<String> getOpplysningIds(HentPerson hentPerson) {
+
+        return nonNull(hentPerson) ? Arrays.stream(hentPerson.getClass().getMethods())
+                .filter(method -> method.getName().contains("get"))
+                .filter(method -> method.getReturnType().equals(List.class))
+                .map(method -> {
+                    try {
+                        return (List<? extends MetadataDTO>) method.invoke(hentPerson);
+                    } catch (IllegalAccessException | InvocationTargetException e) {
+                        log.error("Feilet å lese verdi fra getter {} ", e.getMessage(), e);
+                        return new ArrayList<MetadataDTO>();
+                    }
+                })
+                .flatMap(Collection::stream)
+                .map(MetadataDTO::getMetadata)
+                .map(MetadataDTO.Metadata::getOpplysningsId)
+                .collect(Collectors.toSet()) : emptySet();
     }
 }
